src-ken&y/objects/Shipment_Line__c.object
<CustomObject>
    <customHelpPage>HelpShipment</customHelpPage>
    <description>Shipment lines.</description>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CIF__c</fullName>
        <label>CIF</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Company associated with this shipment invoice line</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Shipment Lines</relationshipLabel>
        <relationshipName>Shipment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of line item</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <description>Discount allowed for this item</description>
        <label>Discount Percent</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Duty__c</fullName>
        <label>Duty</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Ship_Date__c</fullName>
        <label>Estimated Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exceptions_Count__c</fullName>
        <label>Exceptions Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Extended_Cost__c</fullName>
        <description>Extended Cost for the line</description>
        <label>Extended Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extended_Price__c</fullName>
        <description>This field is calculated as:
Quantity_Shipped__c * Unit_Price__c *(1- (Discount_Percent__c))</description>
        <formula>ROUND((Quantity_Shipped__c * ( Sales_Order_Line__r.Unit_Price__c  - Sales_Order_Line__r.Off_Invoice_Rate__c)) * (1- Discount_Percent__c ),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The extended price = Quantity Shipped * Unit Price *(1- (Discount Percent)).</inlineHelpText>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to facility</description>
        <label>Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Shipment Lines</relationshipLabel>
        <relationshipName>Shipment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finalized__c</fullName>
        <description>Indicates if the header is finalized.</description>
        <formula>Shipment__r.Finalized__c</formula>
        <inlineHelpText>A check mark indicates that the document is final. Kenandy will automatically generate an accounting entry for it in the next scheduled batch process.</inlineHelpText>
        <label>Finalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HS_Code__c</fullName>
        <label>HS Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Exceptions__c</fullName>
        <formula>Exceptions_Count__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historical__c</fullName>
        <formula>Shipment__r.Historical__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Historical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Import_Taxes__c</fullName>
        <label>Import Taxes</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Item that is being shipped.</description>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Shipment Lines</relationshipLabel>
        <relationshipName>Shipment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to location</description>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Shipment Lines</relationshipLabel>
        <relationshipName>Shipment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <formula>Shipment__r.Locked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_Date__c</fullName>
        <label>Need Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Pallets_Planned__c</fullName>
        <inlineHelpText>The planned number of pallets.</inlineHelpText>
        <label>Number of Pallets Planned</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Line</label>
        <referenceTo>Order_Line__c</referenceTo>
        <relationshipLabel>Shipment Lines</relationshipLabel>
        <relationshipName>Shipment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Shipment Lines</relationshipLabel>
        <relationshipName>Shipment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Parent Sales Order Line if one exists</description>
        <label>Parent Sales Order Line</label>
        <referenceTo>Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Shipment Lines (Parent Sales Order Line)</relationshipLabel>
        <relationshipName>Child_Shipment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned_Product_Volume__c</fullName>
        <description>Volume of the products</description>
        <label>Planned Product Volume</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Weight__c</fullName>
        <description>Copy of total weight from Sales Order line</description>
        <inlineHelpText>The weight as specified on the sales order line.</inlineHelpText>
        <label>Planned Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Weight__c</fullName>
        <inlineHelpText>The weight of the line for products only</inlineHelpText>
        <label>Product Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Product</description>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Shipment Lines</relationshipLabel>
        <relationshipName>Shipment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order Line</label>
        <referenceTo>Purchase_Order_Line__c</referenceTo>
        <relationshipLabel>Shipment Lines</relationshipLabel>
        <relationshipName>Shipment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Allocated__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount allocated on the shipment lines</description>
        <label>Quantity Allocated</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_From_Stock__c</fullName>
        <label>Quantity From Stock</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Picked__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Picked</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Planned__c</fullName>
        <description>The quantity that is planned to be shipped. The actual quantity shipped might be different than this value.</description>
        <label>Quantity Released</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Shipped__c</fullName>
        <description>Quantity shipped</description>
        <label>Quantity Shipped</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_To_Pick__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Plan Picked</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to sales order line</description>
        <label>Sales Order Line</label>
        <referenceTo>Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Shipment Lines</relationshipLabel>
        <relationshipName>Shipment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The sales order related to this shipment</description>
        <label>Sales Order</label>
        <referenceTo>Sales_Order__c</referenceTo>
        <relationshipLabel>Shipment Lines</relationshipLabel>
        <relationshipName>Shipment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selling_UOM__c</fullName>
        <formula>IF(NOT(ISBLANK(Sales_Order_Line__c)), Sales_Order_Line__r.Selling_UOM__r.Name, Item__r.Stocking_UOM__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selling UOM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <description>Lookup to Shipment</description>
        <label>Shipment</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Shipment Lines</relationshipLabel>
        <relationshipName>Shipment_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Stocking_UOM__c</fullName>
        <formula>Item__r.Stocking_UOM__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stocking UOM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtransaction_Type__c</fullName>
        <label>Subtransaction Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if taxable. If customer has a resale number or is not a taxable entity then this item will not be taxed even if box is checked.</description>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Weight__c</fullName>
        <description>Total Weight of the Shipment Line.</description>
        <formula>Weight__c   *   Quantity_Shipped__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Weight</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <description>Price of the item.</description>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT_Type__c</fullName>
        <label>VAT Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VAT</fullName>
                </value>
                <value>
                    <fullName>Cross Border</fullName>
                </value>
                <value>
                    <fullName>Domestic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <label>VAT</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Unit of Measure of the Total Weight.</description>
        <label>Weight UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Shipment Lines</relationshipLabel>
        <relationshipName>Shipment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <description>Product Weight.</description>
        <label>Weight</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Will be populated for shipment lines with item source as &apos;Build To Order&apos;</description>
        <label>Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Shipment Lines</relationshipLabel>
        <relationshipName>Shipment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Shipment Line</label>
    <nameField>
        <label>Shipment Line</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipment Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>